# Compiler-Construction-for-C

./: README.md
Phase-1/: Makefile  encode.c  encode.h  gram.y  gram.y.bak  test.c  tree.c  tree.h
Phase-2/: CMakeLists.txt  encode.c  encode.h  gram.y  message.c  my.s  my_90.s  proj2-test.pl  tree.c  tree.h
Phase-3/: README.txt  backend-x86.c  encode.c  encode.h  gram.tab.c  gram.y  main.c  message.h  scan.l  tree.c  tree.h
